--- a/lab-eda-bivariate.ipynb
+++ b/lab-eda-bivariate.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Crosstab Analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -60,16 +67,22 @@
     "sorted_crosstab_result = crosstab_result.sort_values(by=True, ascending=False)\n",
     "\n",
     "print(sorted_crosstab_result)\n",
-    "\n"
+    "\n",
+    "#There are no discernable products but Groceries, Health & Personal Care, Power & Hand Tools have around 6% influence not enough to be of any meaning need further investigation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#There are no discernable products but Groceries, Health & Personal Care, Power & Hand Tools have around 6% influence not enough to be of any meaning need further investigation"
+    "# Statistical Tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chi-square test"
    ]
   },
   {
@@ -103,6 +116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cramér's V"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -132,6 +152,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization stacked bar chart"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -140,6 +167,20 @@
     "crosstab_result.plot(kind=\"bar\", stacked=True)\n",
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: Exploring Product Prices and Ratings Across Categories and Brands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminary Step: Remove outliers in product prices."
    ]
   },
   {
@@ -166,6 +207,22 @@
     "data_series = df['price']  \n",
     "outliers = tukeys_test_outliers(data_series)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Violin Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a new DataFrame without outliers\n",
     "filtered_df = df[~df['price'].isin(outliers)]\n",
     "\n",
@@ -179,7 +236,14 @@
     "\n",
     "plt.xticks(rotation=45, ha='right')\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which product category tends to have the highest median price? Don't filter here by top categories."
    ]
   },
   {
@@ -189,6 +253,13 @@
    "outputs": [],
    "source": [
     "# Best or highest median are = Men, Fragrances and Sports & Outdoors in that order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bar charts"
    ]
   },
   {
@@ -219,6 +290,13 @@
    "outputs": [],
    "source": [
     "# the highest average price is commanded by Sports & Outdoors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Box Plots"
    ]
   },
   {
@@ -274,6 +352,13 @@
    "outputs": [],
    "source": [
     "#The Pearson correlation coefficient of -0.07767299878181444 suggests a weak negative linear relationship between Amazon prices and the stars of the product. This indicates that there is a slight tendency for products with higher prices to have slightly lower star ratings on Amazon, and vice versa. However, the strength of this relationship is quite weak, implying that other factors may play a more significant role in determining product ratings. Further analysis is required"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 3: Investigating the Interplay Between Product Prices and Ratings"
    ]
   },
   {
@@ -369,6 +454,20 @@
    "outputs": [],
    "source": [
     "# The same stands for the Spearman correlation. There is no direct correlation between price and stars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scatter plot"
    ]
   },
   {
@@ -505,6 +604,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -524,6 +630,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# QQ Plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -533,6 +646,13 @@
     "sm.qqplot(filtered_df['price'], line='s');\n",
     "sm.qqplot(filtered_df_stars_gt_0['price'], line='s');\n",
     "sm.qqplot(df['price'], line='s');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BONUS"
    ]
   },
   {
